# catalog

./: .gitignore  docker-compose.yml
server/: .env.example  Dockerfile  alembic.ini  app.py  main.py  neo4j_db.py  postgres_db.py  pyproject.toml  schemas.py
server/alembic/: env.py
ui/: .prettierrc  package.json
ui/src/: App.tsx
ui/src/pages/: About.tsx  Home.tsx
